# SYSY-RPG

./: CMakeLists.txt
doc/: design.md
